# CPPgame

./: CMakeLists.txt  Core.cpp  Creature.cpp  Creature.h  Creature_NPC.cpp  Creature_NPC.h  Doxyfile  Hero.cpp  Hero.h  Location.cpp  Location.h  MagicSpell.cpp  MagicSpell.h  StupidOgre.cpp  StupidOgre.h  build.sh  main.cpp
Core/: Location.cpp  Location.h
Creatures/: Creature.cpp  Creature.h  Creature_NPC.cpp  Creature_NPC.h  Hero.cpp  Hero.h  StupidOgre.cpp  StupidOgre.h
Headers/: BaseHeal.h  Creature.h  Fireball.h
Headers/Creatures/: Creature.h
Magic/: BaseHeal.cpp  BaseHeal.h  Fireball.cpp  Fireball.h  MagicSpell.cpp  MagicSpell.h
Sources/: BaseHeal.cpp  Creature.cpp  Creature_NPC.cpp  Fireball.cpp  Hero.cpp  Location.cpp  MagicSpell.cpp  StupidOgre.cpp
Sources/Creatures/: Creature.cpp  Creature_NPC.cpp  Hero.cpp  StupidOgre.cpp
Sources/Magic/: Fireball.cpp  MagicSpell.cpp
headers/: Creature.h  Creature_NPC.h  Hero.h  Location.h
src/: Creature.cpp  Creature_NPC.cpp  Hero.cpp  Location.cpp  main.cpp
